@@ -8,6 +8,7 @@ aTunes 2.0.1
 - FIX: Avoid progress bar move when time labels needs extra space
 - FIX: Don't show "Buffering" message for downloaded podcast feed entries
 - FIX: Shown wrong incomplete tags with System LAF [2992481]
+- FIX: Some components where not updated when changing look and feel
 
 
 aTunes 2.0.0
